--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/dctablac/BasicBlog#readme",
   "dependencies": {
+    "body": "^5.1.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "parser": "^0.1.4"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
