--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "mongoose": "^5.9.15",
+    "multer": "^1.4.2",
     "parser": "^0.1.4"
   },
   "devDependencies": {
